verifyotp, resendotp, google login refresh acess

--- a/Backends/.env
+++ b/Backends/.env
@@ -1,3 +1,7 @@
 JWTSECRET='cfewfhbwk$nklnwefjkl%'
 MONGODBURL="mongodb://localhost:27017/HandySecondProject"
 PORT='3000'
+NODEMAILER_PASSWORD="efog ahed bjkq yrfq"
+NODEMAILER_GMAIL="sephjithin05@gmail.com"
+JWT_SECRET="sephy%867397432742707%2840128"
+JWT_REFRESH_SECRET="sephjithin%53464575678678"
