--- a/Backends/package.json
+++ b/Backends/package.json
@@ -15,11 +15,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^6.10.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9"
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17"
   }
 }
