--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.1"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
