--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "jsonwebtoken": "^9.0.2",
