--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "redux-persist": "^6.0.0"
