--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
+    "react-router-dom": "^7.5.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
