--- a/frontend/technician/package.json
+++ b/frontend/technician/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.2",
+    "react-router-dom": "^7.5.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
