--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
