--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
