--- a/frontend/technician/package.json
+++ b/frontend/technician/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
