--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
