--- a/frontend/user/tsconfig.json
+++ b/frontend/user/tsconfig.json
@@ -7,7 +7,8 @@
 // }
 {
   "compilerOptions": {
-    "target": "es5",
+    "module": "es2020",
+    "target": "es2020",
     "lib": ["dom", "esnext"],
     "jsx": "react-jsx",  // Ensure this is set to "react-jsx" or "react"
     "moduleResolution": "node",
