create a  json file for pinocde, in frontend

--- a/frontend/user/tsconfig.json
+++ b/frontend/user/tsconfig.json
@@ -12,6 +12,7 @@
     "lib": ["dom", "esnext"],
     "jsx": "react-jsx",  // Ensure this is set to "react-jsx" or "react"
     "moduleResolution": "node",
+    "resolveJsonModule": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
