--- a/Backends/package.json
+++ b/Backends/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "india-pincode-lookup": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "node-cache": "^5.1.2",
