--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "gapi-script": "^1.2.0",
+    "india-pincode-lookup": "^1.0.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
