--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -17,6 +17,7 @@
     "gapi-script": "^1.2.0",
     "india-pincode-lookup": "^1.0.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.503.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
