--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -17,10 +17,12 @@
     "gapi-script": "^1.2.0",
     "india-pincode-lookup": "^1.0.3",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
