--- a/Backends/.env
+++ b/Backends/.env
@@ -5,3 +5,5 @@ NODEMAILER_PASSWORD="efog ahed bjkq yrfq"
 NODEMAILER_GMAIL="sephjithin05@gmail.com"
 JWT_SECRET="sephy%867397432742707%2840128"
 JWT_REFRESH_SECRET="sephjithin%53464575678678"
+RAZORPAY_KEY_ID=rzp_test_qp0MD1b9oAJB0i 
+RAZORPAY_KEY_SECRET=oeINb9psKcTTQp75iGjAtj0H
