--- a/Backends/package.json
+++ b/Backends/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
