google map search implemented

--- a/frontend/user/package.json
+++ b/frontend/user/package.json
@@ -18,6 +18,8 @@
     "india-pincode-lookup": "^1.0.3",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.1.0",
+    "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/leaflet": "^1.9.17",
+    "@types/leaflet-geosearch": "^2.7.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
