--- a/Backends/package.json
+++ b/Backends/package.json
@@ -22,7 +22,8 @@
     "nanoid": "^5.1.5",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.10.1",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
