--- a/frontend/technician/package.json
+++ b/frontend/technician/package.json
@@ -20,7 +20,8 @@
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
