--- a/frontend/user/tsconfig.json
+++ b/frontend/user/tsconfig.json
@@ -17,7 +17,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist"
+    "outDir": "./dist"
   },
   "include": [
     "src/**/*"
