--- a/frontendv2/package.json
+++ b/frontendv2/package.json
@@ -24,6 +24,7 @@
     "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
