--- a/Backends/package.json
+++ b/Backends/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/server/server.ts",
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -36,4 +37,5 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
+  
 }
