--- a/Backends/.env
+++ b/Backends/.env
@@ -7,3 +7,5 @@ JWT_SECRET="sephy%867397432742707%2840128"
 JWT_REFRESH_SECRET="sephjithin%53464575678678"
 RAZORPAY_KEY_ID=rzp_test_qp0MD1b9oAJB0i 
 RAZORPAY_KEY_SECRET=oeINb9psKcTTQp75iGjAtj0H
+
+# MONGODBURL=mongodb+srv://sephyshibumathew99:sephyshibumathew99@cluster0.ea2idwh.mongodb.net/
