--- a/Backends/.env
+++ b/Backends/.env
@@ -6,6 +6,7 @@ NODEMAILER_GMAIL="sephjithin05@gmail.com"
 JWT_SECRET="sephy%867397432742707%2840128"
 JWT_REFRESH_SECRET="sephjithin%53464575678678"
 COOKIE_NAME_USER="refreshtokenuser"
+COOKIE_NAME_TECH="refreshtokentech"
 COOKIE_HTTPONLY="true"
 COOKIE_SECURE="false"
 COOKIE_MAXAGE="604800000"
