admin cookie config in env file

--- a/Backends/.env
+++ b/Backends/.env
@@ -7,6 +7,7 @@ JWT_SECRET="sephy%867397432742707%2840128"
 JWT_REFRESH_SECRET="sephjithin%53464575678678"
 COOKIE_NAME_USER="refreshtokenuser"
 COOKIE_NAME_TECH="refreshtokentech"
+COOKIE_NAME_ADMIN="refreshtokenadmin"
 COOKIE_HTTPONLY="true"
 COOKIE_SECURE="false"
 COOKIE_MAXAGE="604800000"
