put admin email and password to .envfile

--- a/Backends/.env
+++ b/Backends/.env
@@ -11,6 +11,8 @@ COOKIE_NAME_ADMIN="refreshtokenadmin"
 COOKIE_HTTPONLY="true"
 COOKIE_SECURE="false"
 COOKIE_MAXAGE="604800000"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="Adminpassword"
 RAZORPAY_KEY_ID=rzp_test_qp0MD1b9oAJB0i 
 RAZORPAY_KEY_SECRET=oeINb9psKcTTQp75iGjAtj0H
 
