docker compose file changed

--- a/Backends/docker-compose.yaml
+++ b/Backends/docker-compose.yaml
@@ -15,5 +15,13 @@ services:
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
       - RAZORPAY_KEY_SECRET=${RAZORPAY_KEY_SECRET}
       - RAZORPAY_KEY_ID=${RAZORPAY_KEY_ID}
+      - COOKIE_NAME_USER=${COOKIE_NAME_USER}
+      - COOKIE_NAME_TECH=${COOKIE_NAME_TECH}
+      - COOKIE_NAME_ADMIN=${COOKIE_NAME_ADMIN}
+      - COOKIE_HTTPONLY=${COOKIE_HTTPONLY}
+      - COOKIE_SECURE=${COOKIE_SECURE}
+      - COOKIE_MAXAGE=${COOKIE_MAXAGE}
+      - ADMIN_EMAIL=${ADMIN_EMAIL}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
      
     
